[gd_scene load_steps=5 format=3 uid="uid://cjp8y7s3vuwwm"]

[ext_resource type="Script" path="res://Scripts/room_1.gd" id="1_uxdei"]
[ext_resource type="Texture2D" uid="uid://c773heuypddrf" path="res://Sprites/Tiles.png" id="2_vu5nb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iqudr"]
texture = ExtResource("2_vu5nb")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, 8, -4, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, 8, -4, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, 8, -4, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_m4l3v"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_iqudr")

[node name="Room1" type="Node2D"]
position = Vector2(368, 256)
script = ExtResource("1_uxdei")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_m4l3v")
format = 2
layer_0/tile_data = PackedInt32Array(-983063, 65536, 1, -917527, 65536, 1, -851991, 65536, 1, -786455, 65536, 1, -720919, 65536, 1, -655383, 65536, 1, -589847, 65536, 1, -524311, 65536, 1, -458775, 65536, 1, -393239, 65536, 1, -327703, 65536, 1, -262167, 65536, 1, -196631, 65536, 1, -131095, 65536, 1, -65559, 65536, 1, -23, 65536, 1, 65513, 65536, 1, 131049, 65536, 1, 196585, 65536, 1, 262121, 65536, 1, -983062, 65536, 1, 262122, 65536, 1, -983061, 65536, 1, 262123, 65536, 1, -983060, 65536, 1, 262124, 65536, 1, -983059, 65536, 1, 262125, 65536, 1, -983058, 65536, 1, 262126, 65536, 1, -983057, 65536, 1, 262127, 65536, 1, -983056, 65536, 1, 262128, 65536, 1, -983055, 65536, 1, -524303, 65536, 1, 262129, 65536, 1, -983054, 65536, 1, -524302, 65536, 1, 262130, 65536, 1, -983053, 65536, 1, -524301, 65536, 1, 262131, 65536, 1, -983052, 65536, 1, 262132, 65536, 1, -983051, 65536, 1, 262133, 65536, 1, -983050, 65536, 1, 65526, 65536, 1, 262134, 65536, 1, -983049, 65536, 1, 65527, 65536, 1, 262135, 65536, 1, -983048, 65536, 1, 65528, 65536, 1, 262136, 65536, 1, -983047, 65536, 1, 65529, 65536, 1, 262137, 65536, 1, -983046, 65536, 1, 262138, 65536, 1, -983045, 65536, 1, -983044, 65536, 1, -524292, 65536, 1, -458756, 65536, 1, -393220, 65536, 1, -327684, 65536, 1, -262148, 65536, 1, -196612, 65536, 1, -131076, 65536, 1, -983043, 65536, 1, -524291, 65536, 1, -458755, 65536, 1, -393219, 65536, 1, -327683, 65536, 1, -262147, 65536, 1, -196611, 65536, 1, -131075, 65536, 1, -983042, 65536, 1, -983041, 65536, 1, 262143, 65536, 1, -1048576, 65536, 1, 0, 65536, 1, 196608, 65536, 1, -1048575, 65536, 1, 1, 65536, 1, 196609, 65536, 1, -1048574, 65536, 1, 2, 65536, 1, 196610, 65536, 1, -1048573, 65536, 1, 3, 65536, 1, 196611, 65536, 1, -1048572, 65536, 1, 196612, 65536, 1, -1048571, 65536, 1, 196613, 65536, 1, -1048570, 65536, 1, -589818, 65536, 1, 196614, 65536, 1, -1048569, 65536, 1, -589817, 65536, 1, 196615, 65536, 1, -1048568, 65536, 1, -589816, 65536, 1, 196616, 65536, 1, -1048567, 65536, 1, 196617, 65536, 1, -1048566, 65536, 1, 196618, 65536, 1, -1048565, 65536, 1, 196619, 65536, 1, -1048564, 65536, 1, 196620, 65536, 1, -1048563, 65536, 1, 196621, 65536, 1, -1048562, 65536, 1, 196622, 65536, 1, -1048561, 65536, 1, 196623, 65536, 1, -1048560, 65536, 1, -983024, 65536, 1, -917488, 65536, 1, -851952, 65536, 1, -786416, 65536, 1, -720880, 65536, 1, -655344, 65536, 1, -589808, 65536, 1, -524272, 65536, 1, -458736, 65536, 1, -393200, 65536, 1, -327664, 65536, 1, -262128, 65536, 1, -196592, 65536, 1, -131056, 65536, 1, -65520, 65536, 1, 16, 65536, 1, 65552, 65536, 1, 131088, 65536, 1, 196624, 65536, 1, -458774, 65536, 1, -458773, 65536, 1, -393237, 65536, 1, -393238, 65536, 1, -327702, 65536, 1, -327701, 65536, 1, -262166, 65536, 1, -196630, 65536, 1, -524274, 65536, 1, -524273, 65536, 1, -458738, 65536, 1, -393202, 65536, 1, -393201, 65536, 1, -458737, 65536, 1, -327665, 65536, 1, -262129, 65536, 1)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(272, 64, 272, -256, -368, -256, -368, 64)

[node name="CameraPoint" type="Marker2D" parent="."]
position = Vector2(-48, -96)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
